# RuleBridge-BIM

./: .gitattributes  .gitignore  CITATION.cff  DATASETS_AND_LINKS.csv  LICENSE  README.md  REPRODUCIBLE_RUNBOOK.md  RESULTS_SUMMARY.md  ZENODO_RELEASE_NOTES_R16.md  ZENODO_RELEASE_NOTES_R17.md  ZENODO_RELEASE_NOTES_R18.md  ZENODO_RELEASE_NOTES_R19.md  pyproject.toml
configs/: project.yml  rule_catalogue.yml
configs/ids_reference/: rulebridge_ifctester_reference.ids
data_processed/: code_accord_entity_label_stats.csv  code_accord_relation_stats.csv  code_accord_rule_candidates.csv  code_accord_summary.csv  corpus_artifact_manifest.csv  corpus_manifest_strata.csv  counterfactual_validation.csv  external_ifcopenshell_direct_reference.csv  external_ifcopenshell_direct_reference_by_model.csv  ids_example_stats.csv  ids_facet_long.csv  ids_rulebridge_tool_agreement.csv  ifc_model_inventory.csv  ifctester_ids_route_mapping.csv  ifctester_reference_by_model.csv  ifctester_reference_summary.csv  model_readiness_index.csv  model_submission_readiness_class.csv  project_delivery_triage_simulation.csv  readiness_by_rule_and_tier.csv  rule_results_element_level.csv  rule_results_model_level.csv
manuscript/: data_and_code_availability.md
manuscript/tables/: table11_mutation_repair_operator_summary.csv  table1_model_inventory.csv  (+7 more)
scripts/: 01_build_corpora.py  02_run_openbim_checks.py  03_make_figures.py  04_external_reference_check.py  07_expanded_corpus_stats.py  08_ifctester_reference.py  09_evidence_route_graph_and_triage.py  10_mutation_repair_simulation.py
(+4 files in other folders)
