[project]
name = "rulebridge-bim"
version = "0.1.0"
description = "Reproducible OpenBIM evidence-readiness dataset and diagnostic protocol for automated compliance checking."
requires-python = ">=3.11"
dependencies = [
  "ifcopenshell",
  "pandas",
  "matplotlib",
  "seaborn",
  "lxml",
  "pyyaml",
  "rich"
]

[tool.setuptools.packages.find]
where = ["src"]
