[project]
name = "rulebridge-bim"
version = "0.1.0"
description = "Reproducible OpenBIM evidence-route benchmark for pre-compliance information governance."
requires-python = ">=3.11"
dependencies = [
  "ifcopenshell",
  "pandas",
  "matplotlib",
  "seaborn",
  "lxml",
  "pyyaml",
  "rich",
  "ifctester>=0.8.5",
]

[tool.setuptools.packages.find]
where = ["src"]
